--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,60 @@
+html, body {
+    margin:0;
+    padding:0;
+    height:100%;
+ }
+
+body {
+    background-color: hsl(212, 45%, 89%);
+    display: flex;
+    flex-direction: column;
+}
+
+body div {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+main {
+    max-width: 300px;
+    background-color: white;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+}
+
+img {
+    border-radius: 15px;
+}
+
+.main-text {
+    font-family: Outfit;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.title {
+    font-weight: 700;
+    font-size: 24px;
+    color: hsl(218, 44%, 22%);
+}
+
+.subtitle {
+    font-weight: 400;
+    font-size: 15px;
+    color: hsl(216, 15%, 48%);
+}
+
 .attribution {
     font-size: 11px;
 }
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
-}
-
-.main-text {
-    font-size: 15px;
-    font-family: Outfit;
-}
-
-.title {
-    font-weight: bold
-}
-
-.subtitle {
-    /* for later */
 }
